feat: /refresh, HttpOnly refresh token
HttpOnly refresh token for /register, /login and /refresh as /register and /login authenticates user to access the dashboard immediately
